<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/btn_about_credit"
        android:layout_width="136dp"
        android:layout_height="0dp"
        android:layout_marginTop="212dp"
        android:layout_marginBottom="40dp"
        android:text="@string/about"
        app:layout_constraintBottom_toTopOf="@+id/btn_calc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_calc"
        android:layout_width="136dp"
        android:layout_height="0dp"
        android:layout_marginBottom="42dp"
        android:text="@string/calc"
        app:layout_constraintBottom_toTopOf="@+id/btn_journal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_about_credit"
        tools:ignore="VisualLintOverlap" />

    <Button
        android:id="@+id/btn_journal"
        android:layout_width="132dp"
        android:layout_height="0dp"
        android:layout_marginBottom="293dp"
        android:text="@string/journal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_calc" />

    <TextView
        android:id="@+id/info"
        android:layout_width="0dp"
        android:layout_height="540dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="38dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>